Correction de la config